--- a/app/src/main/res/layout/item_finished_home.xml
+++ b/app/src/main/res/layout/item_finished_home.xml
@@ -15,18 +15,18 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/img_upcoming"
+            android:id="@+id/img_finished_home"
             android:layout_width="100dp"
             android:layout_height="100dp"
             tools:src="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/txt_name_upcoming"
+            android:id="@+id/name_finished_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="4dp"
-            android:layout_toEndOf="@id/img_upcoming"
+            android:layout_toEndOf="@id/img_finished_home"
             android:maxLines="3"
             android:text="@string/app_name"
             android:textColor="@color/purple_500"
@@ -34,13 +34,13 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/txt_owner_upcoming"
+            android:id="@+id/owner_finished_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/txt_name_upcoming"
+            android:layout_below="@id/name_finished_home"
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
-            android:layout_toEndOf="@id/img_upcoming"
+            android:layout_toEndOf="@id/img_finished_home"
             android:text="@string/owner"
             android:textSize="10sp" />
 
