--- a/app/src/main/res/layout/item_finished_home.xml
+++ b/app/src/main/res/layout/item_finished_home.xml
@@ -30,8 +30,7 @@
             android:maxLines="3"
             android:text="@string/app_name"
             android:textColor="@color/purple_500"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/owner_finished_home"
