--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/main"
         android:layout_width="match_parent"
@@ -12,18 +11,14 @@
         android:orientation="vertical"
         tools:context=".ui.detail.DetailActivity">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            app:cardCornerRadius="12dp"
-            android:layout_marginBottom="8dp">
 
-            <ImageView
-                android:id="@+id/img_detail"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:src="@tools:sample/avatars" />
-        </androidx.cardview.widget.CardView>
+        <ImageView
+            android:id="@+id/img_detail"
+            android:layout_width="match_parent"
+            android:layout_height="210dp"
+            android:scaleType="centerCrop"
+            android:layout_marginBottom="8dp"
+            tools:src="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/category_detail"
@@ -40,77 +35,80 @@
             android:id="@+id/name_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="8dp"
             android:text="@string/app_name"
-            android:textSize="24sp"
-            android:textStyle="bold"
             android:textColor="@color/purple_500"
-            android:layout_marginHorizontal="8dp"/>
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/owner_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginBottom="8dp"
             android:text="@string/owner"
-            android:textSize="13sp"
-            android:layout_marginHorizontal="8dp"/>
+            android:textSize="13sp" />
 
         <ProgressBar
             android:id="@+id/progress_bar"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:visibility="gone"/>
+            android:visibility="gone" />
+
         <TextView
             android:id="@+id/waktu_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/begin"
-            android:textSize="14sp"
-            android:gravity="center_horizontal"
             android:layout_marginHorizontal="8dp"
-            android:layout_marginVertical="8dp"/>
+            android:layout_marginVertical="8dp"
+            android:gravity="center_horizontal"
+            android:text="@string/begin"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/quota_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/quota_detail"
-            android:textSize="14sp"
-            android:gravity="center_horizontal"
             android:layout_marginHorizontal="8dp"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginBottom="8dp"
+            android:gravity="center_horizontal"
+            android:text="@string/quota_detail"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/location_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/location"
-            android:textSize="14sp"
-            android:gravity="center_horizontal"
             android:layout_marginHorizontal="8dp"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginBottom="8dp"
+            android:gravity="center_horizontal"
+            android:text="@string/location"
+            android:textSize="14sp" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@android:color/darker_gray"
             android:layout_marginHorizontal="8dp"
-            android:layout_marginVertical="4dp"/>
+            android:layout_marginVertical="4dp"
+            android:background="@android:color/darker_gray" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="8dp"
             android:text="Deskripsi"
-            android:textSize="18sp"
-            android:layout_margin="8dp"/>
+            android:textStyle="bold"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/description_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="@tools:sample/lorem/random"
+            android:layout_marginHorizontal="8dp"
             android:layout_marginVertical="6dp"
-            android:layout_marginHorizontal="8dp"/>
+            tools:text="@tools:sample/lorem/random" />
 
         <Button
             android:id="@+id/btn_regis"
@@ -118,8 +116,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="8dp"
             android:layout_marginVertical="6dp"
-            android:text="Register"/>
-
+            android:text="Register" />
 
 
     </LinearLayout>
