--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:title="@string/title_home"
+        app:showAsAction="never"/>
 
     <item
         android:id="@+id/navigation_upcoming"
         android:icon="@drawable/baseline_calendar_month_24"
-        android:title="@string/title_upcoming" />
+        android:title="@string/title_upcoming"
+        app:showAsAction="never"/>
 
     <item
         android:id="@+id/navigation_finished"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_finished" />
+        android:title="@string/title_finished"
+        app:showAsAction="never"/>
 
 </menu>
