--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,7 +17,8 @@
             android:layout_height="210dp"
             android:scaleType="centerCrop"
             android:layout_marginBottom="8dp"
-            tools:src="@tools:sample/avatars" />
+            tools:src="@tools:sample/avatars"
+            android:contentDescription="@string/app_name" />
 
         <TextView
             android:id="@+id/category_detail"
@@ -98,7 +98,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:text="Deskripsi"
+            android:text="@string/deskripsi"
             android:textStyle="bold"
             android:textSize="18sp" />
 
@@ -116,7 +116,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="8dp"
             android:layout_marginVertical="6dp"
-            android:text="Register" />
+            android:text="@string/register" />
 
 
     </LinearLayout>
