--- a/app/src/main/res/layout/fragment_upcoming.xml
+++ b/app/src/main/res/layout/fragment_upcoming.xml
@@ -33,7 +33,7 @@
         android:id="@+id/txt_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Dicoding Event"
+        android:text="@string/dicoding_event"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@color/purple_500"
@@ -46,7 +46,7 @@
         android:id="@+id/txt_subtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Recommendation event for you!"
+        android:text="@string/recomendation"
         android:textSize="14sp"
         android:layout_marginStart="8dp"
         app:layout_constraintTop_toBottomOf="@id/txt_title"
