--- a/app/src/main/res/layout/item_finished.xml
+++ b/app/src/main/res/layout/item_finished.xml
@@ -5,7 +5,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_gravity="center"
-    android:background="@color/white"
     android:layout_marginTop="6dp"
     android:layout_marginBottom="6dp"
     android:layout_marginStart="2dp"
@@ -21,7 +20,8 @@
             android:id="@+id/img_finished"
             android:layout_width="match_parent"
             android:layout_height="170dp"
-            tools:src="@tools:sample/avatars"/>
+            tools:src="@tools:sample/avatars"
+            android:contentDescription="@string/app_name" />
 
         <TextView
             android:id="@+id/txt_name_finished"
