--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -28,4 +28,10 @@
         android:name="com.example.dicodingeventapp.ui.detail.DetailActivity"
         android:label="@string/detail"
         tools:layout="@layout/activity_detail"/>
+
+    <activity
+        android:id="@+id/navigation_search"
+        android:name="com.example.dicodingeventapp.ui.search.SearchActivity"
+        android:label="@string/search"
+        tools:layout="@layout/activity_search"/>
 </navigation>
