--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -23,6 +23,12 @@
         android:label="@string/title_finished"
         tools:layout="@layout/fragment_finished" />
 
+    <fragment
+        android:id="@+id/navigation_favorite"
+        android:name="com.example.dicodingeventapp.ui.favorite.FavoriteFragment"
+        android:label="@string/favorite"
+        tools:layout="@layout/fragment_favorite"/>
+
     <activity
         android:id="@+id/navigation_detail"
         android:name="com.example.dicodingeventapp.ui.detail.DetailActivity"
