--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -29,6 +29,12 @@
         android:label="@string/favorite"
         tools:layout="@layout/fragment_favorite"/>
 
+    <fragment
+        android:id="@+id/navigation_setting"
+        android:name="com.example.dicodingeventapp.ui.setting.SettingFragment"
+        android:label="@string/setting"
+        tools:layout="@layout/fragment_setting"/>
+
     <activity
         android:id="@+id/navigation_detail"
         android:name="com.example.dicodingeventapp.ui.detail.DetailActivity"
