--- a/app/src/main/res/layout/item_finished.xml
+++ b/app/src/main/res/layout/item_finished.xml
@@ -31,8 +31,7 @@
             android:layout_margin="4dp"
             android:maxLines="3"
             android:text="@string/app_name"
-            android:textSize="14sp"
-            android:textColor="@color/purple_500"/>
+            android:textSize="14sp" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
