--- a/app/src/main/res/layout/item_upcoming.xml
+++ b/app/src/main/res/layout/item_upcoming.xml
@@ -43,8 +43,7 @@
             android:maxLines="3"
             android:text="@string/app_name"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:textColor="@color/purple_500"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/txt_owner_upcoming"
